1.2.6 unreleased

- A nasty bug in expression evaluation in Ansible 1.9 makes us require Ansible 2.0+.
  [smcmahon]

- Add plone_always_run_buildout option. Mainly useful for CI situations.
  [smcmahon]

- Change strategy on mr.developer. No longer set git-clone-depth=1, as this destroyed ability to set revisions and branches. If you want a shallow clone, use "depth=1" in the source spec.
  [smcmahon]

- Add plone_extra_find_links option to enable download eggs from private servers.
  [jpgimenez]

- Relicense as BSD-3-Clause.

- Add missing instance_config for multi instance use
  [gomez]

1.2.5 2016-01-24

- Update supervisord enable to use ansible's service module.
  [smcmahon]

- Make sure supervisord is enabled after install. The CentOS package does not do that by default.
  [smcmahon]

1.2.4 2016-01-10

- Update to 5.0.2. Remove 20151208 hotfix.

1.2.3 2016-01-02

- Instance path fouled up for three-decimal versions. Thanks, oggers.
  [smcmahon]

- Add plone_buildout_extra option.
  [smcmahon]

- Add plone_extra_parts option to add additional buildout parts to automatically generated buildout.
  [smcmahon]

1.2.2 2015-12-10

- Memmon was getting installed in supervisor task even if max client memory was 0. Thanks, oggers. Fixes #49
  [smcmahon]

- Add 20151208 hotfix
  [smcmahon]

1.2.1 2015-12-02

- Use instance and program discrimination when setting supervisor memmon.
  [smcmahon]

1.2.0 2015-11-15

- Refactor default variables to support multiple Plones more easily.
  [smcmahon]

- Add documentation example for setting up multiple plones on
  a single target server.
  [smcmahon]

- Set mr.developer git_clone_depth to 1 when using mr.developer.
  Elaborate documentation for plone_sources variable.
  [smcmahon]

1.1.3 2015-10-13

- Doc update.
  [smcmahon]

1.1.2 2015-10-13

- Adapt to build either Plone 4.3.x or Plone 5.0.
  [smcmahon]

- Remove unused version cfg files.
  [smcmahon]

1.1.1 2015-07-28

- buildout git repo checkout was not working. Fixed.