@@ -147,7 +147,7 @@
   register: cache_stat
 
 - name: Load buildout cache from host file
-  when: plone_buildout_cache_file and not cache_stat.stat.exists
+  when: instance_config.plone_buildout_cache_file and not cache_stat.stat.exists
   unarchive:
     creates="{{ instance_config.plone_target_path }}/buildout-cache"
     src="{{ instance_config.plone_buildout_cache_file }}"
@@ -156,7 +156,7 @@
     group={{ instance_config.plone_group }}
 
 - name: Download buildout cache if needed
-  when: plone_buildout_cache_url and not (plone_buildout_cache_file or cache_stat.stat.exists)
+  when: instance_config.plone_buildout_cache_url and not (instance_config.plone_buildout_cache_file or cache_stat.stat.exists)
   get_url:
     url: "{{ instance_config.plone_buildout_cache_url }}"
     dest: "{{ instance_config.plone_target_path }}/buildout-cache.tar.bz2"
@@ -308,10 +308,12 @@
 
 - name: Run buildout
   when: instance_config.plone_always_run_buildout or
-        instance_config.plone_autorun_buildout and (instance_status.changed or not buildout_status.stat.exists)
+        instance_config.plone_autorun_buildout and
+        (instance_status.changed or not buildout_status.stat.exists)
   command: bin/buildout
     chdir={{ plone_instance_home }}
   become_user: "{{ instance_config.plone_buildout_user }}"
+  register: ran_buildout
 
 - name: Everything in buildout cache is group-readable
   file:
@@ -385,7 +387,9 @@
   with_sequence: count={{ instance_config.plone_client_count }}
 
 - name: Supervisor zeoclients tasks are restarted
-  when: instance_config.plone_use_supervisor and instance_config.plone_autorun_buildout and instance_status.changed
+  when: instance_config.plone_use_supervisor and
+        instance_config.plone_restart_after_buildout and
+        ran_buildout.changed
   supervisorctl:
     name={{ supervisor_instance_discriminator }}zeoclient{{ item }}
     state=restarted
