@@ -42,7 +42,6 @@
         plone_additional_versions:
           - "plone4.csrffixes = 1.0.9"
           - "cssselect = 0.9.1"
-          - "nothing.much = 0.9.1"
 
   roles:
 
